--- a/src/styles/Global-media.css
+++ b/src/styles/Global-media.css
@@ -8,9 +8,21 @@
 
 @media (max-width: 800px) {
   main {
-    padding-top: calc(var(--space-xxl) + var(--space-lg));
+    padding-top: calc(var(--space-lg) + var(--space-md));
   }
 }
+
+@media (max-width: 399px) {
+  main {
+    padding-top: calc(var(--space-xxxl) + var(--space-xxl));
+  }
+}
+
+/* @media (max-width: 500px) {
+  main {
+    padding-top: calc(var(--space-lg) + var(--space-lg));
+  }
+} */
 
 /* === Tablet & Below: ≤1200px === */
 @media (max-width: 1200px) {
@@ -105,7 +117,7 @@
     flex-direction: column;
     align-items: center;
     margin-top: var(--space-lg);
-    margin-bottom: var(--space-xxl);
+    /* margin-bottom: var(--space-xxl); */
   }
 
   .contact-links {
@@ -128,15 +140,57 @@
 
   .hero-row {
     margin-top: var(--space-xxl);
+    margin-bottom: var(--space-xxxl);
   }
 
   .cta-buttons {
     margin-top: var(--space-md);
-    margin-bottom: var(--space-xl);
+    /* margin-bottom: var(--space-xl); */
   }
 
   .contact-links {
     margin-top: var(--space-xl);
     margin-bottom: var(--space-xxl);
   }
+
+  .terminal-box {
+  max-width: 80%;
+  }
+
+  .subheading {
+  max-width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center
+  }
+
+    .blog-tabs {
+    flex-direction: column;
+    align-items: center;
+    gap: var(--space-sm);
+  }
+
+  .blog-tabs .tab-button {
+    width: 100%;
+    text-align: center;
+  }
+}
+
+/* === Mobile View: ≤400px === */
+@media (max-width: 400px) {
+
+  .subheading {
+  max-width: 75%;
+  }
+
+  .terminal-box {
+  max-width: 75%;
+  }
+
+  .blog-grid {
+  padding-left: var(--space-md);
+  padding-right: var(--space-md);
+  justify-content: center;
+  }
+
 }
